@@ -19,6 +19,7 @@ extern "C" {
 #define WIN32_LEAN_AND_MEAN 1
 #include <windows.h>
 #endif
+#include "glcorearb.h"
 
 #define WGL_WGLEXT_VERSION 20250203
 
